<resources>
    <string name="app_name">ArteCraft IMS</string>
    <string name="action_add_subject">Add Product</string>
    <string name="course_code">Product Quantity: %d</string>
    <string name="course_credit">Product Price: %.2f</string>
    <string name="title_activity_subjects">Product List</string>
    <string name="no_data_found">No data found in database!</string>
    <string name="student_count">Number of Purchase/s: %d</string>
    <string name="subject_count">Number of Product/s: %d</string>
    <string name="taken_subject_count">Number of Taken Product/s: %d</string>
    <string name="delete_button_description">This icon is responsible for delete the resource</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_subject">CreateSubjectActivity</string>
    <string name="registration_no">Date:</string>
    <string name="email">Date: </string>
    <string name="phone">Status: </string>
    <string name="cross_image_content_description">Delete student from SQLite database</string>
    <string name="empty_list_message">List is Empty!</string>
    <string name="student_name">Customer Name</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="edit_button_description">Edit Single student information</string>
    <string name="subject_name">Product Name</string>
    <string name="subject_code">Product Quantity</string>
    <string name="subject_credit">Product Price</string>
    <string name="add_new_subject">Add New Product</string>
    <string name="student_information">Customer Information</string>
    <string name="name">Name</string>
    <string name="registration_no_with_color">Registration Number: </string>
    <string name="subject_list">Product List</string>
    <string name="student_list">Customer List</string>
    <string name="database_summary">Total Customers: %1$d. Total Products: %2$d</string>
    <string name="update_button">Update</string>
    <string name="table_row_count_failed">Table row count failed</string>
    <string name="taken_subject_by_student">Bought Products by Customer</string>
    <string name="student_and_taken_subject"><![CDATA[Purchase Info]]></string>
    <string name="no_subject">This customer haven\'t taken any product</string>
    <string name="subject_assign">Products Bought by Customer</string>
    <string name="close">Close</string>
    <string name="no_subject_so_add_now">No product is found in database. Please add product from Home page\'s menu</string>
    <string-array name="purchase_status">
        <item> </item>
        <item>Reserved</item>
        <item>Purchased</item>
        <item>Shipped</item>
        <item>Delivered</item>
    </string-array>
</resources>
