<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <EditText
        android:id="@+id/studentNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/student_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/registrationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/registration_no"
        android:inputType="number"
        android:visibility="gone"
        android:text="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentNameEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatSpinner

        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:entries="@array/purchase_status"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="Purchase Status"
        app:layout_constraintTop_toBottomOf="@+id/registrationEditText"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />



    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancelButton"
        android:text="@string/create_button"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/createButton"
        android:text="@string/cancel_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
